Experimenting with background alignment to try to fix weird behaviour of background when scrolling on devices where the viewport changes (e.g. search bar disappears and reappears on mobile devices)

--- a/src/base.css
+++ b/src/base.css
@@ -120,10 +120,10 @@ body, html {
 
 .background {
     position: fixed;
-    bottom: 0;
-    left: 0;
+    top: 0;
+    right: 0;
     width: 100vw;
-    height: 100vh;
+    height: 125vh;
     background: url("background.jpg") no-repeat;
     -webkit-background-size: cover;
     -moz-background-size: cover;
@@ -136,10 +136,10 @@ body, html {
 
 .background-gradient {
     position: fixed;
-    bottom: 0;
-    left: 0;
+    top: 0;
+    right: 0;
     width: 100vw;
-    height: 100vh;
+    height: 125vh;
     background: radial-gradient(circle at center, #17267377, #04050ddd 90%);
     z-index: -1;
 }
